@@ -262,11 +262,4 @@
       type=".interfaces.IFeed"
       />
 
-  <route
-    factory=".mailin_monitor.KarlMailInMonitor"
-    path="/mailin/*traverse"
-    name="mailin_monitor"
-    use_global_views="True"
-    />
-
 </configure>
