@@ -122,6 +122,11 @@ Unreleased
 
 - Added specific exclusion for ICalendarLayer from 'texts' catalog index.
 
+- Fixed bug with mailin quarantine monitor generating bad links to quarantined
+  messages.  Ended up taking entirely different approach to mounting the
+  repoze.mailin.monitor subapplication.  Implementation this time around is
+  messy but should look prettier when BFG 1.3 is ready.
+
 3.15 (2009-12-14)
 -----------------
 
